fix h1 styling on mobile

--- a/styles/ui.scss
+++ b/styles/ui.scss
@@ -149,6 +149,7 @@ body.dark {
 
 h1 {
   font-size: 1.5em;
+  line-height: 1.2em;
 }
 
 h4 {
